style: fix sidebar sliding on mobile

--- a/src/sass/components/_layout.sass
+++ b/src/sass/components/_layout.sass
@@ -56,20 +56,18 @@
     &-grid
       display: block
     &-sidebar
-      position: fixed
-      top: 0
-      left: 0
-      width: 320px
-      height: 100%
-      z-index: 20
-      transform: translateX(-320px)
-      transition: 0.3s transform ease-out
+      // position: fixed
+      // top: 0
+      // left: 0
+      // width: 320px
+      // height: 100%
+      // z-index: 20
+      // transform: translateX(-320px)
+      // transition: 0.3s transform ease-out
+      display: none
       &._hide
         width: 320px
         transform: translateX(0px)
-
-@media (max-width: 1200px)
-  .layout
     &-page
       &._lf-row
         .layout
